--- a/src/template/welcome-email.hbs
+++ b/src/template/welcome-email.hbs
@@ -30,7 +30,7 @@
       <tr>
         <td class='container'>
 
-          <h1>Welcome, {{firstName}}!</h1>
+          <h1>Welcome, {{data.name}}!</h1>
         </td>
       </tr>
       <tr>
